# horst

./: .gitignore  CMakeLists.txt  Gopkg.toml  Makefile  build.sh  config.json  horst.go  run.sh
builder/: builder.go  runner.go
cmd/horst-dev-runner/: main.go
cmd/horst-k8s-compiler/: main.go
cmd/logger/: Dockerfile  Makefile  main.go
cmd/projector/: Dockerfile  Makefile  main.go
cmd/textfilter/: Dockerfile  Makefile  main.go
cmd/texthistogram/: Dockerfile  Makefile  main.go
cmd/textsanitizer/: Dockerfile  Makefile  main.go
cmd/textsplitter/: Dockerfile  Makefile  main.go
cmd/twittersource/: Dockerfile  Makefile  example-config.json  main.go
components/: interface.go
components/base/: Base.go
components/logger/: Component.go
components/projector/: Component.go
components/textfilter/: Component.go
components/texthistogram/: Component.go
components/textsanitizer/: Component.go
components/textsplitter/: Component.go
components/twittersource/: Component.go
config/: config.go
docker/: Dockerfile  Dockerfile.template
horst-cli/: main.go
links/: links.go  links_test.go
manager/: manager.go
plugins/textmining/: CMakeLists.txt
plugins/textmining/include/horst/plugins/: IncrementalWordHistogram.h  RegexFilter.h  TextNormalizer.h  TextSplitter.h
plugins/textmining/source/: export.cpp
plugins/twittersource/: CMakeLists.txt
plugins/twittersource/include/horst/plugins/: LineFramer.h  TwitterSource.h
plugins/twittersource/source/: LineFramer.cpp  export.cpp
plugins/utils/: CMakeLists.txt
processors/base/: base.go
processors/blackhole/: blackhole.go
processors/logger/: logger.go
registry/: registry.go  registry_test.go
runner/: CMakeLists.txt  Runner.go  main.cpp  runner.go  test.json
runner/include/horst/: ClassManager.h  ConfigManager.h  ConfigParser.h  PluginLoader.h  Processor.h  ProcessorManager.h  ThreadPool.h
runner/source/: ProcessorManager.cpp  main.cpp
scripts/: testconfig.json  twitter_test.json
server/: server.go
(+22 files in other folders)
